--- a/DateRange/Base.lproj/Main.storyboard
+++ b/DateRange/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="viewtest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="DateRange" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -19,8 +19,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ic-rd-YMq" userLabel="Header View">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jt-9D-4gr">
-                                        <rect key="frame" x="139" y="51" width="323" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jt-9D-4gr">
+                                        <rect key="frame" x="13" y="51" width="574" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="nzN-Gx-aCB"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -28,6 +31,9 @@
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
+                                    <constraint firstItem="7jt-9D-4gr" firstAttribute="leading" secondItem="6Ic-rd-YMq" secondAttribute="leading" constant="13" id="3d6-Yb-AWF"/>
+                                    <constraint firstAttribute="trailing" secondItem="7jt-9D-4gr" secondAttribute="trailing" constant="13" id="AtO-MX-0WB"/>
+                                    <constraint firstItem="7jt-9D-4gr" firstAttribute="top" secondItem="6Ic-rd-YMq" secondAttribute="top" constant="51" id="diw-X8-WRK"/>
                                     <constraint firstAttribute="height" constant="80" id="skL-F9-r26"/>
                                 </constraints>
                             </view>
